--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,17 @@ categories = []
 publish = false
 
 [dependencies]
-anyhow = "1.0.66"
+anyhow = "1.0.68"
+atomic_enum = "0.2.0"
 chrono-english = "0.1.7"
+derive_more = "0.99.17"
+ksuid = "0.2.0"
+postgres = "0.19.4"
 # date_time_parser = "0.1.1"
 serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway","http", "model","utils", "rustls_backend"]}
-simple_logger = "4.0.0"
-thiserror = "1.0.37"
-tokio = { version = "1.22.0", features = ["full"] }
+simple_logger =  "4.0.0"
+strum = "0.24.1"
+strum_macros = "0.24.3"
+thiserror = "1.0.38"
+tokio = { version = "1.23.0", features = ["full"] }
 
