fix: await message commands
cleanup some formatting
delete unused comments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["erics118"]
 edition = "2021"
 rust-version = "1.65.0"
-description = "A discord bot to manage reminders."
+description = "A discord bot to manage reminders"
 repository = ""
 license = "MIT"
 keywords = ["discord", "reminder"]
