--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.68"
+dotenvy = "0.15.6"
 # atomic_enum = "0.2.0"
 # chrono-english = "0.1.7"
 # derive_more = "0.99.17"
