--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,20 @@ categories = []
 publish = false
 
 [dependencies]
-anyhow = "1.0.68"
+color-eyre = "0.6.2"
 dotenvy = "0.15.6"
 env_logger = "0.10.0"
 log = "0.4.17"
 postgres = "0.19.4"
-serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway","http", "model", "utils", "rustls_backend"]}
+serenity = { version = "0.11.5", default-features = false, features = [
+    "builder",
+    "cache",
+    "client",
+    "gateway",
+    "http",
+    "model",
+    "utils",
+    "rustls_backend",
+] }
 tokio = { version = "1.24.1", features = ["full"] }
 tokio-postgres = "0.7.7"
-
