--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ publish = false
 
 [dependencies]
 color-eyre = "0.6.2"
-dotenvy = "0.15.6"
+dotenvy = "0.15.7"
 env_logger = "0.10.0"
 log = "0.4.17"
-postgres = "0.19.4"
+postgres = "0.19.5"
 serenity = { version = "0.11.5", default-features = false, features = [
     "builder",
     "cache",
@@ -27,5 +27,7 @@ serenity = { version = "0.11.5", default-features = false, features = [
     "utils",
     "rustls_backend",
 ] }
-tokio = { version = "1.25.0", features = ["full"] }
-tokio-postgres = "0.7.7"
+tokio = { version = "1.27.0", features = ["full"] }
+tokio-postgres = "0.7.8"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
