--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ dotenvy = "0.15.7"
 env_logger = "0.10.0"
 lazy_static = "1.4.0"
 log = "0.4.17"
+openssl = "0.10.49"
 postgres = "0.19.5"
+postgres-openssl = "0.5.0"
 serenity = { version = "0.11.5", default-features = false, features = [
     "builder",
     "cache",
@@ -30,6 +32,5 @@ serenity = { version = "0.11.5", default-features = false, features = [
 ] }
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-postgres = "0.7.8"
-tokio-postgres-rustls = "0.9.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
