--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,23 @@ dotenvy = "0.15.7"
 env_logger = "0.10.0"
 log = "0.4.17"
 serenity = { version = "0.11.5", default-features = false, features = [
-    "builder",
-    "cache",
-    "client",
-    "gateway",
-    "http",
-    "model",
-    "utils",
-    "rustls_backend",
+  "builder",
+  "cache",
+  "client",
+  "gateway",
+  "http",
+  "model",
+  "utils",
+  "rustls_backend",
 ] }
 tokio = { version = "1.27.0", features = ["full"] }
+sqlx = { version = "0.6", features = [
+  "runtime-tokio-rustls",
+  "postgres",
+  "macros",
+  "uuid",
+  "chrono",
+  "tls",
+] }
+uuid = { version = "1.3.1", features = ["v4"] }
+chrono = "0.4.24"
