--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,24 +16,31 @@ anyhow = "1.0.71"
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 log = "0.4.17"
-serenity = { version = "0.11.5", default-features = false, features = [
-  "builder",
-  "cache",
-  "client",
-  "gateway",
-  "http",
-  "model",
-  "utils",
-  "rustls_backend",
-] }
 tokio = { version = "1.28.1", features = ["full"] }
-sqlx = { version = "0.6", features = [
-  "runtime-tokio-rustls",
-  "postgres",
-  "macros",
-  "uuid",
-  "chrono",
-  "tls",
-] }
-uuid = { version = "1.3.3", features = ["v4"] }
 chrono = "0.4.24"
+
+[dependencies.serenity]
+git = "https://github.com/serenity-rs/serenity"
+branch = "next"
+default-features = false
+features = [
+    "builder",
+    "cache",
+    "client",
+    "gateway",
+    "http",
+    "model",
+    "utils",
+    "rustls_backend",
+]
+
+[dependencies.sqlx]
+version = "0.6"
+features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "macros",
+    "uuid",
+    "chrono",
+    "tls",
+]
