--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ env_logger = "0.10.0"
 log = "0.4.17"
 tokio = { version = "1.28.1", features = ["full"] }
 chrono = "0.4.24"
+uuid = { version = "1.3.3", features = ["v4"] }
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity"
