refactor: use workspaces
create tyme-api
create tyme-db
create tyme-cli
move bot to tyme-discord
create tyme-utils
create tyme-web

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,9 @@
 [workspace]
-members = ["bot", "human_time"]
+members = [
+    "tyme",
+    "tyme-api",
+    "tyme-db",
+    "tyme-discord",
+    "tyme-web",
+    "tyme-utils",
+]
