--- a/tyme-db/Cargo.toml
+++ b/tyme-db/Cargo.toml
@@ -9,8 +9,9 @@ tyme-utils = { path = "../tyme-utils" }
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 log = "0.4.18"
 tokio = { version = "1.28.2", features = ["full"] }
-chrono = "0.4.25"
-uuid = { version = "1.3.3", features = ["v4"] }
+chrono = { version = "0.4.25", features = ["serde"] }
+uuid = { version = "1.3.3", features = ["v4", "serde"] }
+serde = "1.0.163"
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity"
