--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -7,10 +7,13 @@ publish = false
 [dependencies]
 tyme-utils = { path = "../tyme-utils" }
 tyme-db = { path = "../tyme-db" }
+
 anyhow = { version = "1.0.71", features = ["backtrace"] }
+chrono = "0.4.26"
+dotenvy = "0.15.7"
+env_logger = "0.10.0"
 log = "0.4.18"
 tokio = { version = "1.28.2", features = ["full"] }
-chrono = "0.4.25"
 uuid = { version = "1.3.3", features = ["v4"] }
 
 [dependencies.serenity]
