--- a/tyme-db/Cargo.toml
+++ b/tyme-db/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "tyme-db"
 version = "0.1.0"
-edition = "2021"
-publish = false
+authors.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+repository.workspace = true
+license.workspace = true
+publish.workspace = true
 
 [dependencies]
 tyme-utils = { path = "../tyme-utils" }
