--- a/tyme-utils/Cargo.toml
+++ b/tyme-utils/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "tyme-utils"
 version = "0.1.0"
-edition = "2021"
-publish = false
+authors.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+repository.workspace = true
+license.workspace = true
+publish.workspace = true
 
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
