--- a/tyme-utils/Cargo.toml
+++ b/tyme-utils/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "tyme-utils"
 version = "0.1.0"
+edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
