--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,5 @@
 resolver = "2"
 members = ["tyme-db", "tyme-discord", "tyme-utils"]
 
-# [workspace.package]
-# version = "0.1.0"
-# authors = ["erics118"]
-# edition = "2021"
-# rust-version = "1.68.0"
-# repository = "https://github.com/erics118/tyme"
-# license = "MIT"
-# publish = false
+[profile.dev.package.sqlx-macros]
+opt-level = 3
