fix: update MSRV

--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tyme-discord"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.60.0"
 
 [dependencies]
 tyme-utils = { path = "../tyme-utils" }
