--- a/tyme-utils/Cargo.toml
+++ b/tyme-utils/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tyme-utils"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.60.0"
 
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
