--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["tyme-db", "tyme-discord", "tyme-utils"]
+members = ["tyme-db", "tyme-discord"]
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
