--- a/tyme-db/Cargo.toml
+++ b/tyme-db/Cargo.toml
@@ -5,8 +5,6 @@ edition = "2021"
 rust-version = "1.60.0"
 
 [dependencies]
-tyme-utils = { path = "../tyme-utils" }
-
 anyhow = { version = "1.0.71", features = ["backtrace"] }
 chrono = { version = "0.4.26", features = ["serde"] }
 log = "0.4.18"
@@ -31,14 +29,8 @@ features = [
 
 [dependencies.sqlx]
 version = "0.6.3"
-features = [
-    "runtime-tokio-rustls",
-    "mysql",
-    "macros",
-    "migrate",
-    "chrono",
-]
+features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"]
 
 [dependencies.chrono-tz]
 version = "0.8.2"
-features = ["std", "case-insensitive", "serde"]
+features = ["std", "case-insensitive"]
