--- a/tyme-db/Cargo.toml
+++ b/tyme-db/Cargo.toml
@@ -6,10 +6,9 @@ rust-version = "1.60.0"
 
 [dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
-chrono = { version = "0.4.26", features = ["serde"] }
+chrono = "0.4.26"
 
 [dependencies.serenity]
-git = "https://github.com/serenity-rs/serenity"
 branch = "next"
 default-features = false
 features = [
@@ -24,11 +23,12 @@ features = [
     "chrono",
     "interactions_endpoint",
 ]
+git = "https://github.com/serenity-rs/serenity"
 
 [dependencies.sqlx]
-version = "0.6.3"
 features = ["runtime-tokio-rustls", "mysql", "macros", "migrate", "chrono"]
+version = "0.6.3"
 
 [dependencies.chrono-tz]
-version = "0.8.2"
 features = ["std", "case-insensitive"]
+version = "0.8.2"
