--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -15,21 +15,11 @@ log = "0.4.18"
 tokio = { version = "1.28.2", features = ["full"] }
 
 [dependencies.serenity]
-git = "https://github.com/serenity-rs/serenity"
 branch = "next"
 default-features = false
-features = [
-    "builder",
-    "cache",
-    "client",
-    "gateway",
-    "http",
-    "model",
-    "utils",
-    "rustls_backend",
-    "chrono",
-]
+features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"]
+git = "https://github.com/serenity-rs/serenity"
 
 [dependencies.chrono-tz]
-version = "0.8.2"
 features = ["std", "case-insensitive"]
+version = "0.8.2"
