--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -12,8 +12,9 @@ chrono = "0.4.26"
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 log = "0.4.20"
-tokio = { version = "1.29.1", features = ["full"] }
 paste = "1.0.14"
+tokio = { version = "1.29.1", features = ["full"] }
+fuzzy-matcher = "0.3.7"
 
 [dependencies.serenity]
 branch = "next"
