--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -11,17 +11,17 @@ anyhow = { version = "1.0.75", features = ["backtrace"] }
 chrono = "0.4.31"
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
+fuzzy-matcher = "0.3.7"
 log = "0.4.20"
 paste = "1.0.14"
 tokio = { version = "1.33.0", features = ["full"] }
-fuzzy-matcher = "0.3.7"
 
 [dependencies.serenity]
-branch = "next"
 default-features = false
 features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"]
 git = "https://github.com/serenity-rs/serenity"
+rev = "4361c1c"
 
 [dependencies.chrono-tz]
 features = ["std", "case-insensitive"]
-version = "0.8.3"
+version = "0.8.4"
