--- a/tyme-discord/Cargo.toml
+++ b/tyme-discord/Cargo.toml
@@ -2,26 +2,26 @@
 name = "tyme-discord"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.65.0"
+rust-version = "1.74.0"
 
 [dependencies]
 tyme-db = { path = "../tyme-db" }
 
-anyhow = { version = "1.0.75", features = ["backtrace"] }
-chrono = "0.4.31"
-dotenvy = "0.15.7"
-env_logger = "0.10.0"
-fuzzy-matcher = "0.3.7"
-log = "0.4.20"
-paste = "1.0.14"
-tokio = { version = "1.33.0", features = ["full"] }
+anyhow = { version = "1.0.82", features = ["backtrace"] }
+chrono = "0.4"
+dotenvy = "0.15"
+env_logger = "0.11"
+fuzzy-matcher = "0.3"
+log = "0.4"
+paste = "1.0"
+tokio = { version = "1.37", features = ["full"] }
 
 [dependencies.serenity]
 default-features = false
-features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono"]
+features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "chrono", "simd_json"]
 git = "https://github.com/serenity-rs/serenity"
-rev = "4361c1c"
+rev = "5668654"
 
 [dependencies.chrono-tz]
 features = ["std", "case-insensitive"]
-version = "0.8.4"
+version = "0.9"
